add build command

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
+    "build": "prisma generate && nodemon index.js",
     "postinstall": "prisma generate"
   },
   "type": "module",
